_generated-doc/2.7/config/quarkus-vertx-core-config-group-config-pem-key-cert-configuration.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-vertx-core-config-group-config-pem-key-cert-configuration_configuration]]link:#quarkus-vertx-core-config-group-config-pem-key-cert-configuration_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-vertx-core-config-group-config-pem-key-cert-configuration_quarkus.datasource.reactive.key-certificate-pem]]`link:#quarkus-vertx-core-config-group-config-pem-key-cert-configuration_quarkus.datasource.reactive.key-certificate-pem[quarkus.datasource.reactive.key-certificate-pem]`

[.description]
--
PEM Key/cert config is disabled by default.
--|boolean 
|`false`


a| [[quarkus-vertx-core-config-group-config-pem-key-cert-configuration_quarkus.datasource.reactive.key-certificate-pem.keys]]`link:#quarkus-vertx-core-config-group-config-pem-key-cert-configuration_quarkus.datasource.reactive.key-certificate-pem.keys[quarkus.datasource.reactive.key-certificate-pem.keys]`

[.description]
--
Comma-separated list of the path to the key files (Pem format).
--|list of string 
|


a| [[quarkus-vertx-core-config-group-config-pem-key-cert-configuration_quarkus.datasource.reactive.key-certificate-pem.certs]]`link:#quarkus-vertx-core-config-group-config-pem-key-cert-configuration_quarkus.datasource.reactive.key-certificate-pem.certs[quarkus.datasource.reactive.key-certificate-pem.certs]`

[.description]
--
Comma-separated list of the path to the certificate files (Pem format).
--|list of string 
|

|===